2004-04-13  Pawel Rozanski <tokugawa@afn.no-ip.org>

	stripped DOS '\r' from newlines