@@ -1,3 +1,7 @@
+2004-04-14  Pawel Rozanski <tokugawa@afn.no-ip.org>
+
+	* NemerleBindingCompilerServices.cs: uses the StatusBarService
+
 2004-04-13  Pawel Rozanski <tokugawa@afn.no-ip.org>
 
 	stripped DOS '\r' from newlines
